# intro-pyspark

./: Etapas de ajustes do projeto.odt
my-project/: README.rst  pyproject.toml
my-project/my_project/: 01-intro.ipynb
my-project/my_project/.ipynb_checkpoints/: 01-intro-checkpoint.ipynb
