[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["FGalvao77 <fernando.galvao77@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.2.4"
jupyterlab = "^4.1.2"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
seaborn = "^0.13.2"
yellowbrick = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
